; CFG file

[metadata]
name = pyHelper

author = Pascal Brand
author_email = pascal.brand38@gmail.com
maintainer = Pascal Brand
maintainer_email = pascal.brand38@gmail.com

description = Set of python helpers
long_description = file: README.md
long_description_content_type = text/markdown

license = MIT

project_urls =
    Source = https://github.com/pascal.brand38/pyHelper
    Bug Reports = https://github.com/pascal.brand38/pyHelper/issues

[options]
packages =
    pyHelper
python_requires = >=3.6
install_requires =
    PyPDF2 > 2.0.0

